--- a/igcar/package.json
+++ b/igcar/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
