--- a/igcar/package.json
+++ b/igcar/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.11",
     "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
