--- a/igcar/package.json
+++ b/igcar/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "argon2": "^0.40.3",
+    "argon2-browser": "^1.18.0",
+    "argon2-wasm": "^0.9.0",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "particles-bg": "^2.5.5",
     "react": "^18.3.1",
