--- a/igcar/package.json
+++ b/igcar/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,15 +16,18 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.1",
     "particles-bg": "^2.5.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.11",
     "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
