--- a/igcar/package.json
+++ b/igcar/package.json
@@ -8,6 +8,9 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.8.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,11 +20,17 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "bulma": "^1.0.1",
     "json-server": "^1.0.0-beta.1",
+    "jspdf": "^2.5.1",
     "particles-bg": "^2.5.5",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^3.6.172",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -29,6 +38,7 @@
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "tsparticles": "^3.4.0",
     "web-vitals": "^2.1.4"
@@ -37,7 +47,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "node socketServer.js"
   },
   "eslintConfig": {
     "extends": [
