--- a/igcar/package.json
+++ b/igcar/package.json
@@ -28,6 +28,7 @@
     "pdfjs-dist": "^3.6.172",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-bulma-components": "^4.1.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.0.0",
